# kappa-vm

./: .gitignore  CLAUDE.md  CMakeLists.txt  assembler.c  assembler.h  chunk.c  chunk.h  common.h  main.c  opcode.h  readme.md  readme_ja.md  test_bytecode.kbc  value.h  vm.c  vm.h
examples/: README.md  basic_arithmetic.kappa  function_call_complex.kappa  function_call_simple.kappa  function_definition_only.kappa
test_programs/: README.md  test_manual_function.c  test_program_functions.c
tests/: test_assembler.c  test_chunk.c  test_cli.c  test_execution.c  test_macros.h  test_opcode.c  test_vm.c
